--- a/src/functional_components/AccessToggle/AccessToggle.module.scss
+++ b/src/functional_components/AccessToggle/AccessToggle.module.scss
@@ -22,3 +22,13 @@
 .accessToggle + .accessToggle {
   margin-left: 8px;
 }
+
+@media (max-width: $screen_m) {
+  .accessToggle {
+    padding: 4px 8px;
+  }
+
+  .disabled {
+    font-size: 14px;
+  }
+}
