--- a/src/functional_components/AccessWindow/AccessWindow.module.scss
+++ b/src/functional_components/AccessWindow/AccessWindow.module.scss
@@ -4,7 +4,7 @@
 }
 
 .entities {
-    max-height: calc(50vh - 50px - 72px - 72px);
+    height: calc(50vh - 66px);
     overflow-y: auto;
     display: flex;
     flex-direction: column;
