--- a/src/functional_components/AppList/AppList.module.css
+++ b/src/functional_components/AppList/AppList.module.css
@@ -1,5 +1,5 @@
 .container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: flex-start;
 }
