--- a/src/functional_components/DriveMenu/DriveMenu.module.scss
+++ b/src/functional_components/DriveMenu/DriveMenu.module.scss
@@ -8,6 +8,8 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    top: 0;
+    left: 0;
 
     .container {
         padding: 10px 0;
